2015-11-25  Kazuyuki Shudo  <shudo@computer.org>

	* 0.10.5 released.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 6.3.8 to 6.4.9.

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.2.11 to 9.3.6.

	* lib/commons-cli-*.jar
	Apache Commons CLI was updated from 1.3 to 1.3.1.
	Main classes use DefaultParser class instead of deprecated PosixParser.

2015-06-15  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/tool/dhtshell/XMLRPCServer.java
	Uses IPInfoDB API v3.

2015-06-14  Kazuyuki Shudo  <shudo@computer.org>

	* lib/commons-cli-*.jar
	Apache Commons CLI was updated from 1.2 to 1.3.

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.6 to 9.2.11.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.97 to 6.3.8.

2013-11-25  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/routing/impl/AbstractRoutingDriver.java
	'-i' option of owdhtshell and other commands works again.

2013-11-02  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/dht/{impl/ChurnTolerantDHTImpl,DHTConfiguration}.java
	A bug in Reputter was fixed.
	Reputter puts up to 100 key-value pairs. 101st pair is not put.

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.5 to 9.0.6.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.84 to 5.0.97.

2013-09-12  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.4 to 9.0.5.

2013-08-14  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.3 to 9.0.4.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.73 to 5.0.84.

	* build.xml
	Removes Git-related files when a target "distclean" invoked.

2013-06-12  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 8.1.7 to 9.0.3.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.58 to 5.0.73.
