@@ -1,3 +1,9 @@
+2016-04-27  Kazuyuki Shudo  <shudo@computer.org>
+
+	* *.java
+	Spelling mistakes were corrected.
+	E.g. "an utility" is corrected to "a utility".
+
 2015-11-25  Kazuyuki Shudo  <shudo@computer.org>
 
 	* 0.10.5 released.
